<resources>
    <string name="app_name">AMBIENT NOTIFS</string>
     //ANUNCIOS banner ID
    <string name="banner_inferior_ad_unit_id">ca-app-pub-6700746515260621/9785215598</string>


    <string name="banner_inferior_ad_unit_id_demo_test">ca-app-pub-3940256099942544/6300978111</string>




    <string name="apps">Apps</string>
    <string name="options">Options</string>
     <string name="quiet_time">Quiet Time</string>
    <string name="select">Select Apps</string>
    <string name="inverse">Inverse</string>
    <string name="uncheck_all">Uncheck all</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="quietHours">Enable quiet hours</string>
    <string name="quietSum">Do not turn the screen on between the hours below</string>
    <string name="startTime">Start quiet hours</string>
    <string name="stopTime">Stop quiet hours</string>
    <string name="set">Set</string>
    <string name="notification_listener_launch">You will be now taken to the notification settings.
        If you wish to stop Screen Notifications, simply turn it off.</string>
    <string name="notification_listener_warning">Clicking ok will take you to the notification settings.
        For this app to work you will need to turn on AMBIENT NOTIFICATIONS.
        Android will warn you that the app may capture your private data, AMBIENT NOTIFICATIONS never reads the content of notifications.</string>



    <string name="stop_alarm">Stop Alarm</string>


    <string name="service">Service</string>
    <string name="service_title">Screen Notifications Service</string>
    <string name="service_summary">Enable to turn on Screen Notifications</string>
    <string name="admin_title">Device Admin</string>
    <string name="admin_summary">Enable to allow shorter screen timeouts</string>
    <string name="select_apps">Select Apps</string>
    <string name="select_apps_summary">Enable and disable apps to turn the screen on for notifications. Apps that create a notification for the first time will automatically turn the screen on.</string>
    <string name="wake_length">Screen wake length</string>
    <string name="delay_title">Delay</string>
    <string name="AppsToNotify">Choose Aplications to be Notified</string>
    <string name="help">Info</string>
    <string name="version">Version</string>

    <string name="whastspp_title">Whatsapp</string>
    <string name="Gmail_title">Gmail</string>
    <string name="Outlook_title">Outlok</string>
    <string name="Telegram_title">Telegram</string>
    <string name="textoejemplo">sender del whaatspp si es muy largo deberia ponerlo aqui in pasarse de la raaa</string>
    <string name="textlargoejemplo">ejemplo de u whastapp que recibamos de varias lineas a ver que hace la criatura. Apps that create a notification for the first time will automatically turn the screen on.</string>
    <string name="info">Tips</string>
    <string name="onetap">single tap to dismiss and turn off screen</string>
    <string name="twotaps">double tap to bring Lockscreen</string>

    <string name="usoswhatsapp">Used Whastapp</string>
    <string name="usostelegram">Used Telegram</string>
    <string name="usosgmail">Used Gmail</string>
    <string name="usosoutlook">Used Outlook</string>
    <string name="fechainstall">Install Date</string>
    <string name="TODAY">PER DAY</string>
    <string name="TOTALES">SINCE INSTALLED</string>
    <string name="PrivacyPolicy">Privacy Policy</string>


</resources>
