<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

  <PreferenceCategory android:title="@string/service" >

        <CheckBoxPreference
            android:key="service"
            android:title="@string/service_title"
            android:summary="@string/service_summary"
            android:widgetLayout="@layout/preference_switch_layout" />

    </PreferenceCategory>




    <PreferenceCategory android:title="@string/quiet_time">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="quiet"
            android:summary="@string/quietSum"
            android:title="@string/quietHours"
            android:widgetLayout="@layout/preference_switch_layout" />

        <com.mio.jrdv.ambientnotifs.views.TimePreference
            android:defaultValue="22:00"
            android:key="startTime"
            android:showDefault="true"
            android:title="@string/startTime" />

        <com.mio.jrdv.ambientnotifs.views.TimePreference
            android:defaultValue="08:00"
            android:key="stopTime"
            android:showDefault="true"
            android:title="@string/stopTime" />

    </PreferenceCategory>



    <PreferenceCategory android:title="@string/help">


        <Preference
            android:key="version"
            android:title="@string/version" />
        <Preference
            android:key="about"
            android:title="(c)JRDVSoft summer 2018" />

    </PreferenceCategory>


</PreferenceScreen>

