<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/mainlayout"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"

    android:background="@android:color/black"
    tools:context="com.mio.jrdv.ambientnotifs.AlarmReceiverActivity">>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/mainlayout"
        android:id="@+id/relative1">



        <com.mio.jrdv.ambientnotifs.textclock.TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:showSecond="false"
            app:format24Hour="true"
            android:id="@+id/reloj"
            android:layout_marginTop="0dp"
            app:color="@color/colorPrimary"/>

     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="0dp"
         android:layout_gravity="center">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:id="@+id/nt_largeicon"
            android:layout_centerInParent="true"
            android:src="@drawable/personicon"/>


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:id="@+id/iconoApp"
            android:layout_alignEnd="@id/nt_largeicon"
            android:layout_alignBottom="@id/nt_largeicon"
            android:src="@mipmap/ic_launcher_round"

            />


     </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nt_title"
            android:paddingRight="40dp"
            android:paddingLeft="40dp"
            android:text="@string/textoejemplo"
            android:maxLines="2"
            android:layout_gravity="center"
            android:textColor="@android:color/holo_red_light"
            android:layout_margin="0dp"/>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nt_text"
            android:textSize="24sp"
            android:textColor="@android:color/background_light"
            android:text="@string/textlargoejemplo"/>
    </LinearLayout>




        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fotowhastapp"/>






    </LinearLayout>






    <com.google.android.gms.ads.AdView

        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"

        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_inferior_ad_unit_id">
    </com.google.android.gms.ads.AdView>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha="0.3"

        android:id="@+id/fondodifuminar"/>

</FrameLayout>